css/nav.css
.navbar {
    /*background-color: rgba(21, 31, 33, 0.5);*/
	background-color: white;
    border-bottom: 1px solid #dedede;
    font-family: 'Alegreya Sans', sans-serif;
}
.navbar-brand img {
	width: 50px;
	height: 50px;
}

ul.navbar-nav {
	position: relative;
	left: -24px;
	margin: 0 auto;
}

.navbar-nav .nav-item .nav-link {
    color: black;
}

.navbar-nav .nav-item .nav-link:hover {
    font-weight: bold;
	color: #0a2b7c;
}

button.navbar-toggler {
    color: black;
	margin: 14px 0;
}

